# agent-2048

./: .gitignore  CMakeLists.txt  README.md  build.bat  pyproject.toml  requirements.txt  run.bat
include/: eval.hpp
src/agent_2048/: __main__.py  acv.py  agent.py  app.py  eval.cp313-win_amd64.pyd  eval.exp  eval.lib  eval.pyi  evl.py  types.py  utils.py  visual.py
src/algorithm/: eval.cpp  eval.exp  eval.lib  test.cpp
src/cpp/: eval.cpp  eval_entry.cpp
tests/: test.ilk  test_entry.cpp
